[tool.poetry]
name = "repl_nix_ValFriends"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.1"
requests = "^2.31.0"
Flask = "^2.3.2"
disnake = "^2.9.0"
sqlitedict = "^2.1.0"
pydantic-settings = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
