[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "normal"
no_implicit_reexport = true
plugins = "pydantic.mypy"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_nix_ValFriends"
version = "0.1.0"

[tool.poetry.dependencies]
disnake = "^2.9.0"
Flask = "^2.3.2"
loguru = "^0.7.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
python = "^3.10"
requests = "^2.31.0"
sqlitedict = "^2.1.0"

[tool.poetry.dev-dependencies]
black = {allow-prereleases = true, version = "^22.1.0"}
pre-commit = "^2.15.0"
